Added ErrorProne for potential bugs. Fixed potential bugs.